--- a/assessment1/Assessment.html
+++ b/assessment1/Assessment.html
@@ -9,59 +9,69 @@
     <link rel="stylesheet" href="style.css">
     <title>Quiz System</title>
 </head>
+
 <body>
     <h1 class="top">Quiz System</h1>
+
     <div class="container">
         <p>Q1. As per recent data, which big state allocated the highest proportion of their budget towards education?</p>
         <div class="row d-flex justify-content-center q1">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[A] Karnataka</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option right">[B] Chhattisgarh</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[C] Bihar</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[D] Rajasthan</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[A] Karnataka</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1right">[B] Chhattisgarh</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[C] Bihar</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[D] Rajasthan</div>
         </div>
-    </div>    
+    </div>
+
+
+
     <hr>
     <div class="container">
         <p>Q2. Section 133A of IT Act, which was seen in the news, was used to undertake surveys in which office?</p>
         <div class="row d-flex justify-content-center q2">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[A] Oxfam International</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[B] Amnesty International</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option right">[C] BBC</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[D] Thomas Reuters</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[A] Oxfam International</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[B] Amnesty International</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2right">[C] BBC</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[D] Thomas Reuters</div>
         </div>
     </div>
     <hr>
+
     <div class="container">
         <p>Q3. Who coined the term ‘BIMARU’ the acronym for Bihar, Madhya Pradesh, Rajasthan and Uttar Pradesh?</p>
         <div class="row d-flex justify-content-center q3">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option right">[A] Ashish Bose</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[B] Amartya Sen</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[C] Jayati Ghosh</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[D] Manmohan Singh</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3right">[A] Ashish Bose</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[B] Amartya Sen</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[C] Jayati Ghosh</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[D] Manmohan Singh</div>
         </div>
     </div>
     <hr>
     <div class="container">
         <p>Q4. Which state moved the Supreme Court against Governor for refusing to act on several Bills passed by the State legislature?</p>
         <div class="row d-flex justify-content-center q4">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[A] Tamil Nadu</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option right">[B] Telangana</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[C] Kerala</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[D] Punjab</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[A] Tamil Nadu</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4right">[B] Telangana</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[C] Kerala</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[D] Punjab</div>
         </div>
     </div>
     <hr>
     <div class="container">
         <p>Q5. Which Article of the Indian constitution deals with the disqualification of MPs from Lok Sabha or Rajya Sabha?</p>
         <div class="row d-flex justify-content-center q5">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[A] Article 10</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[B] Article 20</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option wrong">[C] Article 32</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option right">[D] Article 102</div>
+
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[A] Article 10</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[B] Article 20</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[C] Article 32</div>
+            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5right">[D] Article 102</div>
+
         </div>
     </div>
-    
-
+<hr>
+    <button class="btn btn-warning btn-show-scores">Show Scores</button>
+<br>
+<br>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
@@ -70,3 +80,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
