--- a/assessment1/Assessment.html
+++ b/assessment1/Assessment.html
@@ -16,23 +16,47 @@
     <div class="container">
         <p>Q1. As per recent data, which big state allocated the highest proportion of their budget towards education?</p>
         <div class="row d-flex justify-content-center q1">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[A] Karnataka</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1right">[B] Chhattisgarh</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[C] Bihar</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q1wrong">[D] Rajasthan</div>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname" value="option1" />
+                <div class="q1wrong">[A] Karnataka</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname" value="option2" />
+                <div class="q1right">[B] Chhattisgarh</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname" value="option3" />
+                <div class="q1wrong">[C] Bihar</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname" value="option4" />
+                <div class="q1wrong">[D] Rajasthan</div>
+            </label>
         </div>
     </div>
-
-
 
     <hr>
     <div class="container">
         <p>Q2. Section 133A of IT Act, which was seen in the news, was used to undertake surveys in which office?</p>
         <div class="row d-flex justify-content-center q2">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[A] Oxfam International</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[B] Amnesty International</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2right">[C] BBC</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q2wrong">[D] Thomas Reuters</div>
+
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname2" value="option1" />
+                <div class="q1wrong">[A] Oxfam International</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname2" value="option2" />
+                <div class="q1wrong">[B] Amnesty International</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname2" value="option3" />
+                <div class="q1right">[C] BBC</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname2" value="option4" />
+                <div class="q1wrong">[D] Thomas Reuters</div>
+            </label>
+
         </div>
     </div>
     <hr>
@@ -40,32 +64,71 @@
     <div class="container">
         <p>Q3. Who coined the term ‘BIMARU’ the acronym for Bihar, Madhya Pradesh, Rajasthan and Uttar Pradesh?</p>
         <div class="row d-flex justify-content-center q3">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3right">[A] Ashish Bose</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[B] Amartya Sen</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[C] Jayati Ghosh</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q3wrong">[D] Manmohan Singh</div>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname3" value="option1" />
+                <div class="q1wrong">[A] Ashish Bose</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname3" value="option2" />
+                <div class="q1wrong">[B] Amartya Sen</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname3" value="option3" />
+                <div class="q1right">[C] Jayati Ghosh</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname3" value="option4" />
+                <div class="q1wrong">[D] Manmohan Singh</div>
+            </label>
         </div>
     </div>
     <hr>
     <div class="container">
         <p>Q4. Which state moved the Supreme Court against Governor for refusing to act on several Bills passed by the State legislature?</p>
         <div class="row d-flex justify-content-center q4">
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[A] Tamil Nadu</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4right">[B] Telangana</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[C] Kerala</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q4wrong">[D] Punjab</div>
+            
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname4" value="option1" />
+                <div class="q1wrong">[A] Tamil Nadu</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname4" value="option2" />
+                <div class="q1right">[B] Telangana</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname4" value="option3" />
+                <div class="q1wrong">[C] Kerala</div>
+            </label>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname4" value="option4" />
+                <div class="q1wrong">[D] Punjab</div>
+            </label>
         </div>
     </div>
     <hr>
     <div class="container">
         <p>Q5. Which Article of the Indian constitution deals with the disqualification of MPs from Lok Sabha or Rajya Sabha?</p>
         <div class="row d-flex justify-content-center q5">
+            
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname5" value="option1"/>
+                <div class="q1wrong">[A] Article 10</div>
+            </label>
 
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[A] Article 10</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[B] Article 20</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5wrong">[C] Article 32</div>
-            <div type="button" class="col-lg-2 col-md-4 col-9 p-3 m-1 option q5right">[D] Article 102</div>
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname5" value="option2" />
+                <div class="q1right">[B] Article 20</div>
+            </label>
 
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname5" value="option3" />
+                <div class="q1wrong">[C] Article 32</div>
+            </label>
+
+            <label class="labl col-lg-2 col-md-4 col-9 p-3 m-1">
+                <input type="radio" name="radioname5" value="option4" />
+                <div class="q1wrong">[D] Article 102</div>
+            </label>
         </div>
     </div>
 <hr>
