--- a/assessment1/Assessment.html
+++ b/assessment1/Assessment.html
@@ -132,7 +132,9 @@
         </div>
     </div>
 <hr>
+<div class="d-flex justify-content-center align-items-center">
     <button class="btn btn-warning btn-show-scores">Show Scores</button>
+</div>
 <br>
 <br>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
